<resources>
    <string name="app_name">JustBreathe Clients</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Tap your logo to get started</string>
    <string name="welcome_button">Enter</string>
    <string name="title_activity_list">Client List</string>
    <string name="last_service_date">Last Service Date:</string>
    <string name="add_dummy_data">Add Dummy Data</string>
    <string name="toast_error_saving">Error saving the data.</string>
    <string name="toast_insertion_success">Dummy Data Inserted Successfully</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="delete_all_data_finished">All data deleted</string>
    <string name="new_client">New Client</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save_new_client">Save New Client</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Date of Birth</string>
    <string name="enter_name">Enter Name</string>
    <string name="if_you_were_referred_by_someone_n_what_is_their_name">If you were referred by someone, \n what is their name?</string>
    <string name="emergency_contact_information">Emergency Contact Information</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="have_you_ever_had_a_massage_before">Have you ever had a massage before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date</string>
    <string name="date_last_massage">What was the date of your last massage?</string>
    <string name="pregnant_question">Are you or have you ever been pregnant?</string>
    <string name="if_currently_pregnant_how_many_weeks">If currently pregnant, how many weeks?</string>
    <string name="date_of_last_pregnancy">Date of last pregnancy</string>
    <string name="any_medications_you_are_currently_taking">Please list any medications you are currently taking</string>
    <string name="please_list_any_recent_surgeries_you_have_had_performed">Please list any surgeries you have had in the last three years</string>
    <string name="any_health_issues_i_should_be_aware_of">Any health issues I should be aware of?</string>
    <string name="numbness">Numbness?</string>
    <string name="swelling">Swelling?</string>
    <string name="headaches">Headaches?</string>
    <string name="what_is_the_purpose_of_your_visit">What is the purpose of your visit?</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="details_name">Name:</string>
    <string name="date_of_last_service">Date of Last Service:</string>
    <string name="notes">Notes:</string>
    <string name="important_notes">IMPORTANT NOTES:</string>
    <string name="contact_information">Contact Information:</string>
    <string name="details_birthday">Date of Birth:</string>
    <string name="referred_by">Referred by:</string>
    <string name="massaged_previously">Massaged Previously?</string>
    <string name="date_of_previous_massage">Date of Previous Massage:</string>
    <string name="pregnant">Pregnant?</string>
    <string name="medications">Medications:</string>
    <string name="goals">Goals:</string>
    <string name="recent_surgeries">Recent Surgeries:</string>
    <string name="health_issues">Health Issues:</string>
    <string name="details_numbness">Numbness</string>
    <string name="details_swelling">Swelling</string>
    <string name="details_headaches">Headaches</string>
    <string name="derogatory_notes">Derogatory Notes:</string>
    <string name="medical">MEDICAL</string>
    <string name="emergency_contact">EMERGENCY CONTACT</string>
    <string name="new_visit">New Visit</string>
    <string name="when">"When: "</string>
    <string name="weeks_pregnant">"Weeks Pregnant: "</string>
    <string name="last_pregnancy">"Last Pregnancy: "</string>
    <string name="newvisit_minutes">How many minutes?</string>
    <string name="price">Price? (include value of certs)</string>
    <string name="app_payment">App Payment</string>
    <string name="gift_certificate">Gift Certificate</string>
    <string name="check">Check</string>
    <string name="credit">Credit</string>
    <string name="cash">Cash</string>
    <string name="mileage_enter_0_if_none">Mileage? Enter 0 if none.</string>
    <string name="tip">Tip?</string>
    <string name="send">Send</string>
    <string name="set_as_itworks_customer">Enable It Works</string>
    <string name="disable_it_works">Disable It Works</string>
    <string name="set_important">Set Important</string>
    <string name="clear_important">Clear Important</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="edit_important_notes">Edit Important Notes</string>
    <string name="edit_derogatory_notes">Edit Derogatory Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_discard_changes">Discard your changes and quit editing?</string>
    <string name="alert_dialog_positive_button">Discard</string>
    <string name="alert_dialog_negative_button">Keep Editing</string>
    <string name="edit_client">Edit Client</string>
    <string name="delete_client">Delete Client</string>
    <string name="editor_date">Date:  </string>
    <string name="delete_this_client_question">Delete this client?</string>
    <string name="sell_certificate">Sell Certificate</string>
    <string name="certificate_value">Certificate Value</string>
    <string name="amount_charged">Amount Charged</string>
    <string name="payment_type">Payment Type:</string>
    <string name="select_payment_types">Select Payment Types</string>
</resources>
