<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    tools:context="com.sigildesigns.massagedb.NewClientActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/new_client_first_name_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/new_client_last_name_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords"/>

                <RadioGroup
                    android:id="@+id/new_client_radio_gender_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/new_client_radio_gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>

                    <RadioButton
                        android:id="@+id/new_client_radio_gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/new_client_email_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/new_client_phone_et"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/new_client_birthday_et"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/birthday"
                    android:inputType="date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/if_you_were_referred_by_someone_n_what_is_their_name"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/new_client_referral_et"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/enter_name"
                    android:inputType="textCapWords"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/emergency_contact_information"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/new_client_emergency_contact_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_and_last_name"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/new_client_emergency_contact_phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_you_ever_had_a_massage_before"
                    android:textSize="24sp"/>

                <CheckBox
                    android:id="@+id/new_client_massage_previously_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:text="@string/yes"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_client_massage_previously_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/new_client_massage_previously_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_last_massage"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/new_client_massage_previously_date"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:inputType="date"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_client_pregnancy_question_tv"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregnant_question"
                    android:textSize="24sp"/>

                <CheckBox
                    android:id="@+id/new_client_pregnant_checkbox"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/yes"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_client_pregnancy_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/new_client_pregnant_weeks_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/if_currently_pregnant_how_many_weeks"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/new_client_last_pregnancy_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:focusable="false"
                    android:hint="@string/date_of_last_pregnancy"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/new_client_medications_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_medications_you_are_currently_taking"
                android:inputType="textCapSentences"/>

            <EditText
                android:id="@+id/new_client_recent_surgeries_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_list_any_recent_surgeries_you_have_had_performed"
                android:inputType="textCapSentences"/>

            <EditText
                android:id="@+id/new_client_health_issues_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_health_issues_i_should_be_aware_of"
                android:inputType="textCapSentences"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/new_client_numbness_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numbness"/>

                <CheckBox
                    android:id="@+id/new_client_swelling_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/swelling"/>

                <CheckBox
                    android:id="@+id/new_client_headaches_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headaches"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/new_client_goals_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_is_the_purpose_of_your_visit"
                android:inputType="textCapSentences"/>

            <Button
                android:id="@+id/new_client_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:text="@string/save_new_client"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
